--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
               <li class="nav-item"><a href="#" class="nav-link px-2 ">Community Guidelines</a></li>
               <li class="nav-item"><a href="#" class="nav-link px-2 ">Contact</a></li>
             </ul>
-            <p class="text-center text-muted">© 2024 <strong>❤️ Mingle Magic</strong>   </p>
+            <p class="text-center text-muted">© 2024 <strong>❤️ Mingle Magic</strong>  Manish Varma </p>
         </footer>
     </div>
 
